Improve code behaviour